--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                
                             </div>
                         </div>
-                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block"><font face="Khmer Rotanak Traiy B">បទពិសោធន៍ផ្នែកច្បាប់</font></a>
+                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block"><font face="Khmer Rotanak Traiy B">អគុណ</font></a>
                     </div>
                 </nav>
             </div>
