--- a/ច្បាប់.html
+++ b/ច្បាប់.html
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block"><font face="Khmer Rotanak Traiy B">បទពិសោធន៍ផ្នែកច្បាប់</font></a>
+                        <a href="" class="btn btn-primary mr-3 d-none d-lg-block"><font face="Khmer Rotanak Traiy B">អគុណ</font></a>
                     </div>
                 </nav>
             </div>
@@ -196,7 +196,7 @@
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមព្រហ្មទណ្ឌ</font></h6>
                             <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/ក្រមព្រហ្មទណ្ឌ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./ច្បាប់/img/ក្រមព្រហ្មទណ្ឌ.jpg" alt="">
+                                <img class="img-fluid" src="./img2/ក្រមព្រហ្មទណ្ឌ.jpg" alt="">
                             </div>
                         </div>
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
@@ -204,7 +204,7 @@
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមរដ្ឋប្បវេណី</font></h6​>
                             <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/Law_030_1207_KH.pdf"><font face="Khmer Pen-Surin">ទញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./ច្បាប់/img/ក្រមរដ្ឋប្បវេណី.png" alt="">
+                                <img class="img-fluid" src="./img2/ក្រមរដ្ឋប្បវេណី.png" alt="">
                             </div>
                         </div>
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
@@ -212,7 +212,7 @@
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមនីតិវិធីព្រហ្មទណ្ឌ</font></h6>
                             <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/11f5822b-fbab-4d0b-a3f4-a53d53996a56.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./ច្បាប់/img/R.jpeg" alt="">
+                                <img class="img-fluid" src="./img2/R.jpeg" alt="">
                             </div>
                         </div>
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
@@ -220,7 +220,7 @@
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមនីតិវិធីរដ្ឋប្បវេណី</font></h6>
                             <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/236.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></p></a></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./ច្បាប់/img/ក្រមនីតិវិធីរដ្ឋប្បវេណី.png" alt="">
+                                <img class="img-fluid" src="./img2/ក្រមនីតិវិធីរដ្ឋប្បវេណី.png" alt="">
                                 <div class="team-social">
                                 </div>
                             </div>
@@ -230,7 +230,7 @@
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">រដ្ឋធម្មនុញ្ញ</font></h6>
                             <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/cambodia_constitution_8.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./ច្បាប់/img/រដ្ឋធម្មនុញ្ញ.jpeg" alt="">
+                                <img class="img-fluid" src="./img2/រដ្ឋធម្មនុញ្ញ.jpeg" alt="">
                                 <div class="team-social">
                                 </div>
                             </div>
