--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
-                <a href="./index.html class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">យុត្តិធ៌ម</font></h1>
+                <a href="./index.html" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
+                    <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">ទំព័រដើម</font></h1>
                 </a>
             </div>
             <div class="col-lg-9">
@@ -69,7 +69,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-0">
                     <a href="./index.html" class="navbar-brand d-block d-lg-none">
-                        <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">យុត្តិធ៌ម</font></h1>
+                    <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">យុត្តិធ៌ម</font></h1>
                     </a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
