--- a/ច្បាប់.html
+++ b/ច្បាប់.html
@@ -194,7 +194,7 @@
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">២</font></h2>
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមព្រហ្មទណ្ឌ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/ក្រមព្រហ្មទណ្ឌ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                            <h6><p class="mb-3 px-4"><a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxtYXN0ZXJjaGFudGh5fGd4OjYwMzlkOGIzODRiYzlhOGU"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
                                 <img class="img-fluid" src="./img2/ក្រមព្រហ្មទណ្ឌ.jpg" alt="">
                             </div>
