--- a/ច្បាប់.html
+++ b/ច្បាប់.html
@@ -194,7 +194,7 @@
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">២</font></h2>
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមព្រហ្មទណ្ឌ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="https://docs.google.com/viewer?a=v&pid=sites&srcid=ZGVmYXVsdGRvbWFpbnxtYXN0ZXJjaGFudGh5fGd4OjYwMzlkOGIzODRiYzlhOGU"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf/ក្រមព្រហ្មទណ្ឌ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
                                 <img class="img-fluid" src="./img2/ក្រមព្រហ្មទណ្ឌ.jpg" alt="">
                             </div>
@@ -202,7 +202,7 @@
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៣</font></h2>
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមរដ្ឋប្បវេណី</font></h6​>
-                            <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/Law_030_1207_KH.pdf"><font face="Khmer Pen-Surin">ទញយក</font></a></p></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf/Law_030_1207_KH.pdf"><font face="Khmer Pen-Surin">ទញយក</font></a></p></h6>
                             <div class="team-img position-relative">
                                 <img class="img-fluid" src="./img2/ក្រមរដ្ឋប្បវេណី.png" alt="">
                             </div>
@@ -210,7 +210,7 @@
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៤</font></h2>
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមនីតិវិធីព្រហ្មទណ្ឌ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/11f5822b-fbab-4d0b-a3f4-a53d53996a56.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf/11f5822b-fbab-4d0b-a3f4-a53d53996a56.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
                                 <img class="img-fluid" src="./img2/R.jpeg" alt="">
                             </div>
@@ -218,7 +218,7 @@
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៥</font></h2>
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមនីតិវិធីរដ្ឋប្បវេណី</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/236.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></p></a></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf/236.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></p></a></h6>
                             <div class="team-img position-relative">
                                 <img class="img-fluid" src="./img2/ក្រមនីតិវិធីរដ្ឋប្បវេណី.png" alt="">
                                 <div class="team-social">
@@ -228,7 +228,7 @@
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">១</font></h2>
                             <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">រដ្ឋធម្មនុញ្ញ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./ច្បាប់/pdf/cambodia_constitution_8.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf/cambodia_constitution_8.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
                                 <img class="img-fluid" src="./img2/រដ្ឋធម្មនុញ្ញ.jpeg" alt="">
                                 <div class="team-social">
