--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><font face="Khmer Rotanak Traiy B">កិច្ចការនិស្សិត</font></a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">ខេមរវិទ្យា</font></a>
+                                    <a href="./ខេមរៈវិទ្យា.html" class="dropdown-item"><font face="Khmer Pen-Surin">ខេមរវិទ្យា</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">ច្បាប់</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">សេដ្ឋកិច្ច</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">កំព្យូទ័រ</font></a>
@@ -117,10 +117,10 @@
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><font face="Khmer Rotanak Traiy B">ក្រុមការងារ</font></a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">ស៊ីណា វឌ្ឍនា - ប្រធានក្រុម</font></a>
-                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">វិស័យរដ្ឋប្បវេណី</font></a>
-                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">វិស័យពាណិជ្ជកម្ម</font></a>
-                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">សន្ទរកថា</font></a>
-                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">វិដេអូផ្សេង</font></a>
+                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin"></font></a>
+                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin"></font></a>
+                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin"></font></a>
+                                    <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin"></font></a>
                                 </div>
                                
                             </div>
