--- a/ខេមរៈវិទ្យា.html
+++ b/ខេមរៈវិទ្យា.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-3 bg-secondary d-none d-lg-block">
                 <a href="./index.html" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                    <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">ច្បាប់</font></h1>
+                    <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">និស្សិត</font></h1>
                 </a>
             </div>
             <div class="col-lg-9">
@@ -69,8 +69,7 @@
                 </div>
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-0">
                     <a href="./index.html" class="navbar-brand d-block d-lg-none">
-                        <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">ច្បាប់</font></h1>
-                    </a>
+                        <h1 class="m-0 display-4 text-primary text-uppercase"><font face="Khmer Rotanak Traiy B">និស្សិត</font></h1></a>
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -78,9 +77,9 @@
                         <div class="navbar-nav mr-auto py-0">
                             <a href="./index.html" class="nav-item nav-link active" style="color: rgb(0, 0, 0);"><font face="Khmer Rotanak Traiy B">ទំព័រដើម</font></a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="color: rgb(240, 191, 76);"></font><font face="Khmer Rotanak Traiy B">ច្បាប់ និងបទប្បញ្ញត្តិ</font></a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"></font><font face="Khmer Rotanak Traiy B">ច្បាប់ និងបទប្បញ្ញត្តិ</font></a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="./ច្បាប់.html" class="dropdown-item" style="color: rgb(17, 0, 255);"><font face="Khmer Pen-Surin">ច្បាប់</font></a>
+                                    <a href="./ច្បាប់.html" class="dropdown-item"><font face="Khmer Pen-Surin">ច្បាប់</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">ព្រះរាជក្រឹត្យ</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">អនុក្រឹត្យ</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">ប្រកាស</font></a>
@@ -93,9 +92,9 @@
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><font face="Khmer Rotanak Traiy B">កិច្ចការនិស្សិត</font></a>
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" style="color: rgb(240, 191, 76);"><font face="Khmer Rotanak Traiy B">កិច្ចការនិស្សិត</font></a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a href="./ខេមរៈវិទ្យា.html" class="dropdown-item"><font face="Khmer Pen-Surin">ខេមរវិទ្យា</font></a>
+                                    <a href="./ខេមរៈវិទ្យា.html" class="dropdown-item" style="color: rgb(17, 0, 255);"><font face="Khmer Pen-Surin">ខេមរវិទ្យា</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">ច្បាប់</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">សេដ្ឋកិច្ច</font></a>
                                     <a href="#" class="dropdown-item"><font face="Khmer Pen-Surin">កំព្យូទ័រ</font></a>
@@ -175,60 +174,65 @@
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="text-center pb-2">
-                <h1 class="text-uppercase"><font face="Khmer Pen-Surin">តម្រា</font></h1>
-                <h1 class="mb-4"><font face="Khmer Pen-Surin">ច្បាប់សំខាន់ៗ</font></h1>
+                <h1 class="text-uppercase"><font face="Khmer Pen-Surin">កិច្ចការនិស្សិត</font></h1>
+                <h1 class="mb-4"><font face="Khmer Pen-Surin">អត្ថបទអក្សរសិល្ប៍</font></h1>
             </div>
             <div>
-                <h3><font face="Khmer OS Kien Svay">១ រដ្ឋធម្មនុញ្ញ</font></h3>
-                <h3><font face="Khmer OS Kien Svay">២ ក្រមព្រហ្មទណ្ឌ</font></h3>
-                <h3><font face="Khmer OS Kien Svay">៣ ក្រមរដ្ឋប្បវេណី</font></h3>
-                <h3><font face="Khmer OS Kien Svay">៤ ក្រមនីតិវិធីព្រហ្មទណ្ឌ</font></h3>
-                <h3><font face="Khmer OS Kien Svay">៥ ក្រមនីតិវិធីរដ្ឋប្បវេណី</font></h3>
+                <h3><font face="Khmer OS Kien Svay">១. រឿង រ៉ូមេអូនិង និងស៊ូលីយែត</font></h3>
+                <h3><font face="Khmer OS Kien Svay">២. រឿង ព្រះអាទិត្យថ្មីរះលើផែនដីចាស់</font></h3>
+                <h3><font face="Khmer OS Kien Svay">៣. រឿង ទុំទាវ ឬទុំឯក</font></h3>
+                <h3><font face="Khmer OS Kien Svay">៤. រឿង ថៅកែចិត្តចោរ</font></h3>
+                <h3><font face="Khmer OS Kien Svay">៥. រឿង សូផាត</font></h3>
             </div>
             <div class="row">
                 <div class="col-12">
                     <div class="bg-primary rounded" style="height: 200px;"></div>
                     <div class="owl-carousel team-carousel position-relative" style="margin-top: -97px; padding: 0 30px;">
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
-                            <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">២</font></h2>
-                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមព្រហ្មទណ្ឌ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./pdf/ក្រមព្រហ្មទណ្ឌ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                            <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">១</font></h2>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">រ៉ូមេអូ និងស៊ូលីយែត</font></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ស៊ីណា វឌ្ឍនា</font></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf2/សង្ខេបរឿង_រ៉ូមេអូ_និងស៊ូលីយែត.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./img2/ក្រមព្រហ្មទណ្ឌ.jpg" alt="">
+                                <img class="img-fluid" src="./img.nissit/រ៉ូមេអូ.JPG" alt="">
+                            </div>
+                        </div>
+                        <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                            <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">២</font></h2>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ព្រះអាទិត្យថ្មីរះលើផែនដីចាស់</font></h6​>
+                                <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">លីម ស៊ីវលីម</font></h6​>
+                            <h6><p class="mb-3 px-4"><a href="./pdf2/ព្រះអាទិត្យថ្មីរះលើផែនដីចាស់.pdf"><font face="Khmer Pen-Surin">ទញយក</font></a></p></h6>
+                            <div class="team-img position-relative">
+                                <img class="img-fluid" src="./img.nissit/ព្រះអាទិត្យ.jpg" alt="">
                             </div>
                         </div>
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៣</font></h2>
-                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមរដ្ឋប្បវេណី</font></h6​>
-                            <h6><p class="mb-3 px-4"><a href="./pdf/Law_030_1207_KH.pdf"><font face="Khmer Pen-Surin">ទញយក</font></a></p></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ទុំទាវ</font></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">សមណ សុខ ពិសី</font></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf2/ទុំទាវ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./img2/ក្រមរដ្ឋប្បវេណី.png" alt="">
+                                <img class="img-fluid" src="./img.nissit/ទុំទាវ.JPG" alt="">
                             </div>
                         </div>
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៤</font></h2>
-                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមនីតិវិធីព្រហ្មទណ្ឌ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./pdf/11f5822b-fbab-4d0b-a3f4-a53d53996a56.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ថោកែចិត្តចោរ</font></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">គាំ ប៊ុនរ៉ានុត</font></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf2/រឿងថៅកែចិត្តចោ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></p></a></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./img2/R.jpeg" alt="">
+                                <img class="img-fluid" src="./img.nissit/ថោកែចិត្ត.JPG" alt="">
+                                <div class="team-social">
+                                </div>
                             </div>
                         </div>
                         <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
                             <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៥</font></h2>
-                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ក្រមនីតិវិធីរដ្ឋប្បវេណី</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./pdf/236.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></p></a></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">សូផាត</font></h6>
+                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ឈុន លីណា</font></h6>
+                            <h6><p class="mb-3 px-4"><a href="./pdf2/សូផាត.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
                             <div class="team-img position-relative">
-                                <img class="img-fluid" src="./img2/ក្រមនីតិវិធីរដ្ឋប្បវេណី.png" alt="">
-                                <div class="team-social">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
-                            <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">១</font></h2>
-                            <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">រដ្ឋធម្មនុញ្ញ</font></h6>
-                            <h6><p class="mb-3 px-4"><a href="./pdf/cambodia_constitution_8.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
-                            <div class="team-img position-relative">
-                                <img class="img-fluid" src="./img2/រដ្ឋធម្មនុញ្ញ.jpeg" alt="">
+                                <img class="img-fluid" src="./img.nissit/សូផាត.JPG" alt="">
                                 <div class="team-social">
                                 </div>
                             </div>
@@ -236,76 +240,10 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- Team End -->
-    <!-- Team Start -->
-    <div class="container-fluid py-5">
-        <div class="container py-5">
-            <div class="text-center pb-2">
-                <h1 class="text-uppercase"><font face="Khmer Pen-Surin">តម្រា</font></h1>
-                <h1 class="mb-4"><font face="Khmer Pen-Surin">ច្បាប់ផ្សេងៗ</font></h1>
-                <h5 class="mb-4"><font face="Khmer OS Bassac">ចុចលើឯកសារណាមួយដែលអ្នកចង់បាន</font></h5>
-            </div>
-            <ul>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/Law_001_0115_KH.pdf" style="color: black;">១​.ច្បាប់ស្តីពីចរាចរណ៍ផ្លូវគោគ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ព្រៃឈើ.pdf" style="color: black;">២.ច្បាប់ស្តីពីព្រៃឈើ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ការងារ.pdf" style="color: black;">៣.ច្បាប់ស្តីពីការងារ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/អាពាហ៍ពិពាហ៍ អង់គ្លេស.pdf" style="color: black;">៤.ច្បាប់ស្តីពីអាពាហ៍ពិពាហ៍​និងគ្រួសារ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីឯកពន្ធភាព.pdf" style="color: black;">៥.ច្បាប់ពីឯកពន្ធភាព</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីយុត្តិធម៌អនីតិជន២០១៦.pdf" style="color: black;">៦.ច្បាប់ពីយុត្តិធ៌៌មអនីតិជន</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ភូមិបាល.pdf" style="color: black;">៧.ច្បាប់ភូមិបាល</a></font></h3>
         </div>
     </div>
     <!-- Team End -->
 
-    <!-- Testimonial End -->
-        <!-- Features Start -->
-        <div class="container-fluid py-5">
-            <div class="container py-5">
-                <div class="row">
-                    <div class="col-lg-6" style="min-height: 500px;">
-                        <div class="position-relative h-100 rounded overflow-hidden">
-                            <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
-                        </div>
-                    </div>
-                    <div class="col-lg-6 pt-5 pb-lg-5">
-                        <div class="feature-text bg-white rounded p-lg-5">
-                            <h6 class="text-uppercase"><font face="Khmer Rotanak Traiy B">លក្ខណៈពិសេស</font></h6>
-                            <h3 class="mb-4"><font face="Khmer Pen-Surin">ហេតុអ្វីយើងត្រូវការចេះច្បាប់?</font></h3>
-                            <div class="d-flex mb-4">
-                                <div class="btn-primary btn-lg-square px-3" style="border-radius: 50px;">
-                                    <h5 class="text-secondary m-0"><font face="Khmer Pen-Surin">០១</font>​</h5>
-                                </div>
-                                <div class="ml-4">
-                                    <h5><font face="Khmer OS Moulpali">ស្គាល់ពីសិទ្ធរបស់ខ្លួន </font></h5>
-                                    <p class="m-0"><font face="Khmer Chantha">អ្នកធ្លាប់លឺសំណួរថា "ធ្វើអញ្ចឹងខុសច្បាប់ដែរ" ដែលជាសំណួរបង្ហាញថាមិនបានស្គាល់ច្បាស់ពីច្បាប់។ សិក្សាច្បាប់អ្នកនឹងយល់ច្បាស់អំពីសិទ្ធសេរីភាពរបស់អ្នកមានកំរិតណា អាចធ្វើអ្វីបានខ្លះ មុនឈានដល់ការប្រព្រឹត្តរឿងដែលហួសព្រំដែន។</font></p>
-                                </div>
-                            </div>
-                            <div class="d-flex mb-4">
-                                <div class="btn-primary btn-lg-square px-3" style="border-radius: 50px;">
-                                    <h5 class="text-secondary m-0"><font face="Khmer Pen-Surin">០២</font></h5>
-                                </div>
-                                <div class="ml-4">
-                                    <h5><font face="Khmer OS Moulpali">បញ្ចុះបញ្ចូលអ្នកដទៃ</font></h5>
-                                    <p class="m-0"><font face="Khmer Chantha">តើអ្នក នឹងមិត្តស្រីរបស់អ្នកធ្លាប់ប្រកែកគ្នា ឬជំទាស់សំដីលើរឿងសាមញ្ញមួយដែរទេ?<br>តើថ្នាក់លើ ឬអ្នកចាត់ការទូទៅដែលស្តីបន្ទោសឱ្យអ្នកទាំងដែរអ្នកប្រឹងប្រែងធ្វើការដែរទេ?<br>សាលាច្បាប់នឹងបង្រៀនអ្នកឱ្យស្គាល់ពីប្រភេទនៃមនុស្ស របៀបដើម្បីយល់គំនិតរបស់ពួកកេ និងរបៀបដើម្បីឱ្យពួកគេយល់ពីអ្វីដែលអ្នកកំពុងបកស្រាយ </font></p>
-                                </div>
-                            </div>
-                            <div class="d-flex">
-                                <div class="btn-primary btn-lg-square px-3" style="border-radius: 50px;">
-                                    <h5 class="text-secondary m-0"><font face="Khmer Pen-Surin">០៣</font></h5>
-                                </div>
-                                <div class="ml-4">
-                                    <h5><font face="Khmer OS Moulpali">ចរចាដំឡើងប្រាក់ឈ្នួល</font></h5>
-                                    <p class="m-0"><font face="Khmer Chantha">​ដោយគ្មានការសង្ស័យ និស្សិតបញ្ចប់ការសិក្សាបីសាលាច្បាប់ដឹងពីរបៀបដើម្បីចរចា ដោះស្រាយបញ្ហា ការលើលអំណះអំណាងដុចអ្នកជំនាញអញ្ចឹង។ វានឹងបង្រៀនថាអ្វីគ្រប់យ៉ាងគឺអាចចរចារបាន រួមទាំងប្រាក់ខែដំបូង </font></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    
         <!-- Footer Start -->
         <div class="container-fluid bg-secondary text-white pt-5 px-sm-3 px-md-5" style="margin-top: 90px;">
             <div class="row mt-5">
