--- a/ច្បាប់.html
+++ b/ច្បាប់.html
@@ -253,7 +253,7 @@
                 <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ការងារ.pdf" style="color: black;">៣.ច្បាប់ស្តីពីការងារ</a></font></h3>
                 <h3><font face="Khmer OS Kien Svay"><a href="./pdf/អាពាហ៍ពិពាហ៍ អង់គ្លេស.pdf" style="color: black;">៤.ច្បាប់ស្តីពីអាពាហ៍ពិពាហ៍​និងគ្រួសារ</a></font></h3>
                 <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីឯកពន្ធភាព.pdf" style="color: black;">៥.ច្បាប់ពីឯកពន្ធភាព</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីយុត្តិធម៌អនីតិជន២០១៦.pdf" style="color: black;">៦.ច្បាប់ពីយុត្តិធ៌៌មអនីតិជន</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីយុត្តិធម៌អនីតិជន២០១៦.pdf" style="color: black;">៦.ច្បាប់ពីយុត្តិធ៌មអនីតិជន</a></font></h3>
                 <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ភូមិបាល.pdf" style="color: black;">៧.ច្បាប់ភូមិបាល</a></font></h3>
         </div>
     </div>
