--- a/ច្បាប់.html
+++ b/ច្បាប់.html
@@ -179,11 +179,11 @@
                 <h1 class="mb-4"><font face="Khmer Pen-Surin">ច្បាប់សំខាន់ៗ</font></h1>
             </div>
             <div>
-                <h3><font face="Khmer OS Kien Svay">១ រដ្ឋធម្មនុញ្ញ</font></h3>
-                <h3><font face="Khmer OS Kien Svay">២ ក្រមព្រហ្មទណ្ឌ</font></h3>
-                <h3><font face="Khmer OS Kien Svay">៣ ក្រមរដ្ឋប្បវេណី</font></h3>
-                <h3><font face="Khmer OS Kien Svay">៤ ក្រមនីតិវិធីព្រហ្មទណ្ឌ</font></h3>
-                <h3><font face="Khmer OS Kien Svay">៥ ក្រមនីតិវិធីរដ្ឋប្បវេណី</font></h3>
+                <h3><a href="./pdf/cambodia_constitution_8.pdf"><font face="Khmer OS Kien Svay">១ រដ្ឋធម្មនុញ្ញ</font></a></h3>
+                <h3><a href="./pdf/ក្រមព្រហ្មទណ្ឌ.pdf"><font face="Khmer OS Kien Svay">២ ក្រមព្រហ្មទណ្ឌ</font></a></h3>
+                <h3><a href="./pdf/Law_030_1207_KH.pdf"><font face="Khmer OS Kien Svay">៣ ក្រមរដ្ឋប្បវេណី</font></a></h3>
+                <h3><a href="./pdf/11f5822b-fbab-4d0b-a3f4-a53d53996a56.pdf"><font face="Khmer OS Kien Svay">៤ ក្រមនីតិវិធីព្រហ្មទណ្ឌ</font></a></h3>
+                <h3><a href="./pdf/236.pdf"><font face="Khmer OS Kien Svay">៥ ក្រមនីតិវិធីរដ្ឋប្បវេណី</font></a></h3>
             </div>
             <div class="row">
                 <div class="col-12">
@@ -243,18 +243,87 @@
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="text-center pb-2">
-                <h1 class="text-uppercase"><font face="Khmer Pen-Surin">តម្រា</font></h1>
                 <h1 class="mb-4"><font face="Khmer Pen-Surin">ច្បាប់ផ្សេងៗ</font></h1>
-                <h5 class="mb-4"><font face="Khmer OS Bassac">ចុចលើឯកសារណាមួយដែលអ្នកចង់បាន</font></h5>
             </div>
             <ul>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/Law_001_0115_KH.pdf" style="color: black;">១​.ច្បាប់ស្តីពីចរាចរណ៍ផ្លូវគោគ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ព្រៃឈើ.pdf" style="color: black;">២.ច្បាប់ស្តីពីព្រៃឈើ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ការងារ.pdf" style="color: black;">៣.ច្បាប់ស្តីពីការងារ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/អាពាហ៍ពិពាហ៍ អង់គ្លេស.pdf" style="color: black;">៤.ច្បាប់ស្តីពីអាពាហ៍ពិពាហ៍​និងគ្រួសារ</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីឯកពន្ធភាព.pdf" style="color: black;">៥.ច្បាប់ពីឯកពន្ធភាព</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីយុត្តិធម៌អនីតិជន២០១៦.pdf" style="color: black;">៦.ច្បាប់ពីយុត្តិធ៌មអនីតិជន</a></font></h3>
-                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ភូមិបាល.pdf" style="color: black;">៧.ច្បាប់ភូមិបាល</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/Law_001_0115_KH.pdf">១​.ច្បាប់ស្តីពីចរាចរណ៍ផ្លូវគោគ</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ព្រៃឈើ.pdf">២.ច្បាប់ស្តីពីព្រៃឈើ</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ការងារ.pdf">៣.ច្បាប់ស្តីពីការងារ</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/អាពាហ៍ពិពាហ៍ អង់គ្លេស.pdf">៤.ច្បាប់ស្តីពីអាពាហ៍ពិពាហ៍​និងគ្រួសារ</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីឯកពន្ធភាព.pdf">៥.ច្បាប់ពីឯកពន្ធភាព</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ស្តីពីយុត្តិធម៌អនីតិជន២០១៦.pdf">៦.ច្បាប់ពីយុត្តិធ៌មអនីតិជន</a></font></h3>
+                <h3><font face="Khmer OS Kien Svay"><a href="./pdf/ច្បាប់ភូមិបាល.pdf">៧.ច្បាប់ភូមិបាល</a></font></h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <div class="bg-primary rounded" style="height: 200px;"></div>
+            <div class="owl-carousel team-carousel position-relative" style="margin-top: -97px; padding: 0 30px;">
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">១</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ច្បាប់ស្តីពីចរាចរណ៍ផ្លូវគោគ</font></h6>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/Law_001_0115_KH.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/ច្បាប់ស្តីពីចរាចរណ៍ផ្លូវគោគ.JPG" alt="">
+                    </div>
+                </div>
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">២</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ច្បាប់ស្តីពីព្រៃឈើ</font></h6​>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/ព្រៃឈើ.pdf"><font face="Khmer Pen-Surin">ទញយក</font></a></p></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/ច្បាប់ស្តីពីព្រៃឈើ.JPG" alt="">
+                    </div>
+                </div>
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៣</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ច្បាប់ស្តីពីការងារ</font></h6>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/ការងារ.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/ការងារ.JPG" alt="">
+                    </div>
+                </div>
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៤</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">អាពាហ៍ពិពាហ៍​និងគ្រួសារ</font></h6>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/អាពាហ៍ពីពាហ៍.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></p></a></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/គ្រួសារ.JPG" alt="">
+                        <div class="team-social">
+                        </div>
+                    </div>
+                </div>
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៥</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ច្បាប់ស្តីពីឯកពន្ធភាព</font></h6>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/ច្បាប់ស្តីពីឯកពន្ធភាព.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/ឯកពន្ធភាព.JPG" alt="">
+                        <div class="team-social">
+                        </div>
+                    </div>
+                </div>
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៦</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ច្បាប់ស្តីពីយុត្តិធ៌មអនីតិជន</font></h6>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/ច្បាប់ស្តីពីយុត្តិធម៌អនីតិជន២០១៦.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/អនីតិជន.JPG" alt="">
+                        <div class="team-social">
+                        </div>
+                    </div>
+                </div>
+                <div class="team-item text-center bg-white rounded overflow-hidden pt-4">
+                    <h2 class="mb-2 px-4"><font face="Khmer Pen-Surin">៧</font></h2>
+                    <h6 class="mb-2 px-4"><font face="Khmer Pen-Surin">ច្បាប់ភូមិបាល</font></h6>
+                    <h6><p class="mb-3 px-4"><a href="./pdf/ច្បាប់ភូមិបាល.pdf"><font face="Khmer Pen-Surin">ទាញយក</font></a></p></h6>
+                    <div class="team-img position-relative">
+                        <img class="img-fluid" src="./img2/ភូមិបាល.JPG" alt="">
+                        <div class="team-social">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Team End -->
